feat(layer_features): 21634 Migrate layer features panel to declarative UniLayout (#1143)
* feat(layer_features): 21634 copy uni layouts for feature cards from codex-generated PR. Add temporary dividers for easier development

* refactor: move UniLayoutRenderer inside LayerFeaturesCard

* feat: Format values in id and priority badges for HOT projects

* feat: add urlTemplate prop to Url component

* fix left padding on layer feature card

* fix time format in hot projects template

* fix: make capitalize util function work on upper-case text

* feat: add formatting to Mapping Types field

* chore: better formatting in UniComponents fixture

* feat: PropertiesTable component

* feat: update new HOT projects layout to use PropertiesTable

* feat: bigger distance from table to other components

* fix fieldsRegistry fixture by adding array type

* feat: add ifCondition parameter for UniLayoutRenderer

* test: add tests for checkIfCondition

* feat: add Block container component

* feat: add Title level support

* feat: ACAPS risks list layout

* feat: add format prop to Base (Text, Title)

* feat: add useFormattedValue hook

* fix Title rendering. Fix UniComponents fixture

* feat: add format prop to CardHeader

* ACAPS seasonal events layout

* delete mock hot layout

* ACAPS information landscape layout

* ACAPS Protection risks monitor layout

* Download link for OAM layout

* Refactor and fix applying string template to Url

* Add Image component for OAM

* Move layer features formats into separate folder

* remove unused date_time format

* Fix missing import in popover demo

* rename format: project_id -> hash_id

* add layerFeaturesFormatsRegistry to fixture

* fix style

* add fields to OAM layout

* add style prop to Image component

* add TODO to oam layout file

* remove old Card from Layer Features panel

* fix formatters signatures

* update url icon margin

* update HOT layout

* Add optional "Archived" badge to HOT layout

* rename ACAPS layout file

* Re

--- a/src/components/Uni/Components/PropertyGrid.module.css
+++ b/src/components/Uni/Components/PropertyGrid.module.css
@@ -1,7 +1,7 @@
 .table {
   display: flex;
-  gap: var(--half-unit);
   flex-direction: column;
+  margin: var(--half-unit) 0;
 }
 
 .table > div {
@@ -16,8 +16,16 @@
   border-top: 1px solid var(--faint-weak);
 }
 
-.table > div > div:last-of-type {
-  max-width: 70%;
-  text-align: end;
-  word-wrap: break-word;
+.table > div > div {
+  padding: 2px 0;
+
+  &:last-of-type {
+    max-width: 70%;
+    text-align: end;
+    word-wrap: break-word;
+  }
+
+  &:only-child {
+    max-width: 100%;
+  }
 }
