--- a/src/components/Uni/Components/Image.module.css
+++ b/src/components/Uni/Components/Image.module.css
@@ -1,9 +1,9 @@
-.image {
+.imageContainer {
   height: 200px;
   width: 100%;
 }
 
-.thumb {
+.image {
   height: 100%;
   width: 100%;
   object-fit: contain;
