--- a/src/components/SimpleLegend/SimpleLegend.module.css
+++ b/src/components/SimpleLegend/SimpleLegend.module.css
@@ -6,7 +6,7 @@
 
 .legendStep {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .stepName {
@@ -15,4 +15,12 @@
 
 .hidden {
   opacity: 0.5;
+}
+
+.smallIcon {
+  margin-top: 2px;
+}
+
+.normalIcon {
+  margin-top: 1px;
 }
