Rename DimensionBlock -> DimensionStack

--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -8,6 +8,10 @@
   margin-bottom: var(--half-unit);
 }
 
+.mcdaLegend {
+  margin-top: var(--unit);
+}
+
 .textIcon {
   margin-top: -1px;
   height: 18px;
