--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -10,9 +10,9 @@
 }
 
 .textIcon {
-  margin-top: 3px;
-  height: 10px;
-  display: inline;
+  margin-top: -1px;
+  height: 18px;
+  width: 18px;
 }
 
 .grayscale {
