--- a/src/components/SimpleLegend/SimpleLegend.module.css
+++ b/src/components/SimpleLegend/SimpleLegend.module.css
@@ -6,14 +6,7 @@
 
 .legendStep {
   display: flex;
-  align-items: flex-start;
-}
-
-.stepTextMultiline {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: var(--half-unit);
+  align-items: center;
 }
 
 .stepName {
@@ -22,8 +15,4 @@
 
 .hidden {
   opacity: 0.5;
-}
-
-.smallIcon {
-  margin-top: 2px;
 }
