--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -4,6 +4,18 @@
   gap: var(--unit);
 }
 
+.dimensionStep {
+  display: flex;
+  align-items: flex-start;
+}
+
+.dimensionStepMultiline {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--half-unit);
+}
+
 .dimensionName {
   margin-bottom: var(--half-unit);
 }
@@ -13,6 +25,7 @@
 }
 
 .textIcon {
+  margin-top: 3px;
   height: 10px;
   display: inline;
 }
