--- a/src/components/SimpleLegend/SimpleLegend.module.css
+++ b/src/components/SimpleLegend/SimpleLegend.module.css
@@ -9,6 +9,13 @@
   align-items: flex-start;
 }
 
+.stepTextMultiline {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--half-unit);
+}
+
 .stepName {
   margin-left: var(--half-unit);
 }
