Add text icon to Text dimension legend

--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -7,3 +7,21 @@
 .dimensionName {
   margin-bottom: var(--half-unit);
 }
+
+.dimensionStepName {
+  margin-left: var(--half-unit);
+}
+
+.textIcon {
+  height: 10px;
+  display: inline;
+}
+
+.extrusionIcon {
+  height: 16px;
+  display: inline;
+}
+
+.grayscale {
+  filter: grayscale(1);
+}
