--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -1,12 +1,11 @@
 .dimensionsContainer {
   display: flex;
   flex-direction: column;
-  gap: var(--unit);
+  gap: var(--double-unit);
 }
 
 .dimensionName {
-  margin-top: var(--half-unit);
-  margin-bottom: var(--unit);
+  margin-bottom: var(--half-unit);
 }
 
 .textIcon {
