feat(MVA): 21210 Multivariate analysis legend (#1151)
* feat: allow MVA without score dimension

* feat: rework MultivariateLegend to include all present dimensions

* fix CircleIcon, SquareIcon and HexIcon ignoring numerical 0 value in styles.width

* Allow passing stepIconSize to SimpleLegendStep

* Align SimpleLegendStep content to the top, to better support long item names

* Change default circle icon stroke width in SimpleLegend

* Slightly different margin top on normal sized icons

* Remove stepIconSize props. Revert CircleIcon stroke width

* remove unused style

* Add multiline text support to SimpleLegendStep

* Refactor in SimpleLegend

* feat: OpacityStepsLegend

* feat: Labels (text) legend

* Add text icon to Text dimension legend

* Extract getDirectAndReversedMCDALayers into function

* Add OpacityStepsLegend and ExtrusionStepsLegend

* Use icons from ui-kit

* Enable grayscale filter for extrusion and opacity legends if there's no color layers in config

* Better margins

* rename DimensionStep -> MultivariateLegendStep

* Rename DimensionBlock -> DimensionStack

* remove unused type

* Revert changes in SimpleLegend

* Add mcda legend subtitle to translations

* Fix rabbit comments

* Fix logic of grouping MCDA axes inside Opacity and Extrusion legends

--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -1,10 +1,23 @@
 .dimensionsContainer {
   display: flex;
   flex-direction: column;
-  gap: var(--unit);
+  gap: var(--double-unit);
 }
 
 .dimensionName {
-  font-weight: 500;
   margin-bottom: var(--half-unit);
+}
+
+.mcdaLegend {
+  margin-top: var(--unit);
+}
+
+.textIcon {
+  margin-top: -1px;
+  height: 18px;
+  width: 18px;
+}
+
+.grayscale {
+  filter: grayscale(1);
 }
