--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -4,6 +4,18 @@
   gap: var(--double-unit);
 }
 
+.dimensionStep {
+  display: flex;
+  align-items: flex-start;
+}
+
+.dimensionStepMultiline {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--half-unit);
+}
+
 .dimensionName {
   margin-bottom: var(--half-unit);
 }
