feat: Print each layer in Bivariate Legend axis

--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -21,3 +21,22 @@
 .grayscale {
   filter: grayscale(1);
 }
+
+.bivariateAxis {
+  max-height: 180px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--half-unit);
+}
+
+.bivariateAxisLayer {
+  line-height: 13px;
+}
+
+.bivariateAxisLabel {
+  color: var(--black);
+}
+
+.bivariateAxisRange {
+  color: var(--faint-strong);
+}
