Only show steps if either dimension has 1 layer or all layers are normalized

--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -22,11 +22,19 @@
   filter: grayscale(1);
 }
 
-.bivariateAxis {
-  max-height: 180px;
+.bivariateXAxis {
+  max-width: 160px;
   display: flex;
   flex-direction: column;
   gap: var(--half-unit);
+}
+
+.bivariateYAxis {
+  max-height: 160px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--half-unit);
+  margin-block-start: var(--double-unit);
 }
 
 .bivariateAxisLayer {
