Disable deselect button instead of hiding it

--- a/src/features/layers_panel/components/DeselectControl/DeselectControl.module.css
+++ b/src/features/layers_panel/components/DeselectControl/DeselectControl.module.css
@@ -1,4 +1,9 @@
 .deselectControl {
   color: var(--accent-strong);
   padding-right: var(--double-unit);
+
+  &:disabled {
+    color: var(--faint-weak-up);
+    cursor: default;
+  }
 }
