feat(toolbar): 99999 make toolbar draggable and wrap buttons

--- a/src/features/toolbar/components/ToolbarContent/ToolbarContent.module.css
+++ b/src/features/toolbar/components/ToolbarContent/ToolbarContent.module.css
@@ -2,9 +2,8 @@
   padding: var(--unit);
   min-height: inherit;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   gap: var(--unit);
-  overflow-x: auto;
 }
 
 .sectionDivider {
