--- a/src/components/MultivariateLegend/MultivariateLegend.module.css
+++ b/src/components/MultivariateLegend/MultivariateLegend.module.css
@@ -21,3 +21,30 @@
 .grayscale {
   filter: grayscale(1);
 }
+
+.bivariateXAxis {
+  max-width: 160px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--half-unit);
+}
+
+.bivariateYAxis {
+  max-height: 160px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--half-unit);
+  margin-block-start: var(--double-unit);
+}
+
+.bivariateAxisLayer {
+  line-height: 13px;
+}
+
+.bivariateAxisLabel {
+  color: var(--black);
+}
+
+.bivariateAxisRange {
+  color: var(--faint-strong);
+}
