fix(search): avoid flex layout on search panel

--- a/src/features/search/styles.module.css
+++ b/src/features/search/styles.module.css
@@ -27,6 +27,10 @@
   display: none;
 }
 
+.contentContainer {
+  display: block;
+}
+
 /* Mobile */
 @media screen and (max-width: 960px) {
   .searchPanel {
