fix(create_layer): hide placeholder option in type selector

--- a/src/features/create_layer/components/EditableLayerFieldContainer/EditableLayerFieldContainer.module.css
+++ b/src/features/create_layer/components/EditableLayerFieldContainer/EditableLayerFieldContainer.module.css
@@ -64,5 +64,9 @@
         box-shadow: 0 0 0 2px var(--complimentary-strong-down);
       }
     }
+
+    & .input.placeholder {
+      color: var(--faint-strong);
+    }
   }
 }
