--- a/src/features/create_layer/components/EditableLayerFieldContainer/EditableLayerFieldContainer.module.css
+++ b/src/features/create_layer/components/EditableLayerFieldContainer/EditableLayerFieldContainer.module.css
@@ -66,7 +66,13 @@
     }
 
     & .input.placeholder {
-      color: var(--faint-strong);
+      color: var(--faint-strong-up);
+      & option {
+        color: var(--base-strong);
+      }
+      & option.placeholderOption {
+        color: var(--faint-strong-up);
+      }
     }
   }
 }
